--- a/app/src/main/res/values/google_admob_id.xml
+++ b/app/src/main/res/values/google_admob_id.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="google_ad_mob_id">ca-app-pub-6326941174130394~1915929397</string>
-    <string name="google_ad_mob_test_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="google_ad_mob_banner_setting_id">ca-app-pub-6326941174130394/2069285710</string>
+    <string name="google_ad_mob_banner_trash_id">ca-app-pub-6326941174130394/7074431891</string>
+
+    <string name="google_ad_mob_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
 
 </resources>
