--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:layout_marginStart="@dimen/margin_main"
         android:src="@drawable/ic_delete_2"
         android:tint="@color/colorGray"
+        android:padding="3dp"
         android:visibility="gone"
         />
 
