--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -38,11 +38,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_ad_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_header"
+        >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_contact"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_header"
+        app:layout_constraintTop_toBottomOf="@id/layout_ad_view_container"
         app:layout_constraintBottom_toTopOf="@id/btn_delete_all"
         android:background="@color/colorBackground"
         />
