--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,35 +6,35 @@
 
     <color name="colorGray">#A3A3A3</color>
     <color name="colorBackground">#EFEFEF</color>
+    <color name="colorDarkGray">#555555</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
 
-    <color name="colorCloud">#ECF0F1</color>
+<!--    <color name="colorCloud">#ECF0F1</color>-->
     <color name="colorSilver">#BDC3C7</color>
-    <color name="colorAsbestos">#7F8C8D</color>
+<!--    <color name="colorAsbestos">#7F8C8D</color>-->
 
-    <color name="RichBlueBlack">#011627</color>
-    <color name="PerlWhite">#fdfffc</color>
-    <color name="Mint">#2ec4b6</color>
-    <color name="BrightRed">#e71d36</color>
-    <color name="YellowOrange">#ff9f1c</color>
+<!--    <color name="RichBlueBlack">#011627</color>-->
+<!--    <color name="PerlWhite">#fdfffc</color>-->
+<!--    <color name="Mint">#2ec4b6</color>-->
+<!--    <color name="BrightRed">#e71d36</color>-->
+<!--    <color name="YellowOrange">#ff9f1c</color>-->
 
-    <color name="RichBlack">#0c090d</color>
-    <color name="PinkRed">#e01a4f</color>
-    <color name="OpalOrange">#f15946</color>
-    <color name="OrangeYellow">#f9c22e</color>
-    <color name="MaximumSkyBlue">#53b3cb</color>
+<!--    <color name="RichBlack">#0c090d</color>-->
+<!--    <color name="PinkRed">#e01a4f</color>-->
+<!--    <color name="OpalOrange">#f15946</color>-->
+<!--    <color name="OrangeYellow">#f9c22e</color>-->
+<!--    <color name="MaximumSkyBlue">#53b3cb</color>-->
 
     f94144-f3722c-f8961e-f9c74f-90be6d-43aa8b-4d908e
 
-    <color name="RedSalsa">#f94144</color>
-    <color name="OrangeRed">#f3722c</color>
-    <color name="YellowOrange2">#f8961e</color>
-    <color name="MaizeYellow">#f9c74f</color>
-    <color name="Pistachio">#90be6d</color>
-    <color name="EmeraldGreen">#43aa8b</color>
-    <color name="CadetBlue">#4d908e</color>
-
+<!--    <color name="RedSalsa">#f94144</color>-->
+<!--    <color name="OrangeRed">#f3722c</color>-->
+<!--    <color name="YellowOrange2">#f8961e</color>-->
+<!--    <color name="MaizeYellow">#f9c74f</color>-->
+<!--    <color name="Pistachio">#90be6d</color>-->
+<!--    <color name="EmeraldGreen">#43aa8b</color>-->
+<!--    <color name="CadetBlue">#4d908e</color>-->
 
     <color name="colorGreen">#2ECC71</color>
     <color name="colorGreenDeep">#27AE60</color>
@@ -49,28 +49,28 @@
     <color name="colorRed">#E74C3C</color>
     <color name="colorRedDeep">#C0392B</color>
 
-    <color name="colorRed1">#FFC0BD</color>
-    <color name="colorRed2">#FF6F67</color>
-    <color name="colorRed3">#EB3127</color>
-    <color name="colorRed4">#940D06</color>
-    <color name="colorRed5">#130100</color>
+<!--    <color name="colorRed1">#FFC0BD</color>-->
+<!--    <color name="colorRed2">#FF6F67</color>-->
+<!--    <color name="colorRed3">#EB3127</color>-->
+<!--    <color name="colorRed4">#940D06</color>-->
+<!--    <color name="colorRed5">#130100</color>-->
 
-    <color name="colorPurple1">#ECBAF8</color>
-    <color name="colorPurple2">#AB51C1</color>
-    <color name="colorPurple3">#821E9B</color>
-    <color name="colorPurple4">#500762</color>
-    <color name="colorPurple5">#0A000D</color>
+<!--    <color name="colorPurple1">#ECBAF8</color>-->
+<!--    <color name="colorPurple2">#AB51C1</color>-->
+<!--    <color name="colorPurple3">#821E9B</color>-->
+<!--    <color name="colorPurple4">#500762</color>-->
+<!--    <color name="colorPurple5">#0A000D</color>-->
 
-    <color name="colorYellow1">#FFF0BD</color>
-    <color name="colorYellow2">#FFDD67</color>
-    <color name="colorYellow3">#EBBF27</color>
-    <color name="colorYellow4">#947506</color>
-    <color name="colorYellow5">#130F00</color>
+<!--    <color name="colorYellow1">#FFF0BD</color>-->
+<!--    <color name="colorYellow2">#FFDD67</color>-->
+<!--    <color name="colorYellow3">#EBBF27</color>-->
+<!--    <color name="colorYellow4">#947506</color>-->
+<!--    <color name="colorYellow5">#130F00</color>-->
 
-    <color name="colorBlue1">#D0DAFD</color>
-    <color name="colorBlue2">#6281E9</color>
-    <color name="colorBlue3">#204BDA</color>
-    <color name="colorBlue4">#0C2B8F</color>
-    <color name="colorBlue5">#020616</color>
+<!--    <color name="colorBlue1">#D0DAFD</color>-->
+<!--    <color name="colorBlue2">#6281E9</color>-->
+<!--    <color name="colorBlue3">#204BDA</color>-->
+<!--    <color name="colorBlue4">#0C2B8F</color>-->
+<!--    <color name="colorBlue5">#020616</color>-->
 
 </resources>
