--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,4 +85,19 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="MenuTitle">
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="MenuSubTitle">
+        <item name="android:textColor">@color/colorDarkGray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="MenuContext">
+        <item name="android:textColor">@color/colorDarkGray</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
 </resources>
