--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"/>
+<vector android:height="252.55606dp" android:viewportHeight="220"
+    android:viewportWidth="223" android:width="256dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="M181.8,38.7c-2.5,2.6 -24.7,24.8 -49.2,49.3l-44.6,44.4 -25,-24.9 -25,-25 -12.8,12.8 -12.7,12.7 38,38 38,38 62,-62 62,-62 -13.1,-13.1 -13,-13 -4.6,4.8z" android:strokeColor="#00000000"/>
 </vector>
