--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+<vector android:height="225dp" android:viewportHeight="194"
+    android:viewportWidth="221" android:width="256.31442dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="M50.1,32.7c-5.8,5.8 -11.4,11.6 -12.4,13l-2,2.5 24.4,24.4 24.4,24.4 -24.5,24.5c-13.4,13.4 -24.1,24.8 -23.6,25.2 0.4,0.4 6.2,6.4 12.8,13.2l11.9,12.4 24.7,-24.6 24.7,-24.7 24.5,24.5 24.5,24.5 13,-13 13,-13 -24.5,-24.5 -24.5,-24.5 24.5,-24.5 24.5,-24.5 -13,-13 -13,-13 -24.5,24.5 -24.5,24.5 -24.5,-24.5c-13.5,-13.5 -24.7,-24.5 -25,-24.4 -0.3,-0 -5.2,4.8 -10.9,10.6z" android:strokeColor="#00000000"/>
 </vector>
