--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -54,6 +54,7 @@
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_license_title_1"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_sub_title"
                 >
@@ -66,7 +67,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="@dimen/margin_main"
                     android:text="@string/license_1"
-                    style="@style/MenuTitle"
+                    style="@style/itemTitle"
                     />
 
                 <androidx.appcompat.widget.AppCompatCheckBox
@@ -92,12 +93,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_license_1"
+                android:id="@+id/layout_license_context_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_main"
-                android:layout_marginEnd="@dimen/margin_main"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:background="@color/colorBackground"
+                >
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
@@ -106,12 +107,15 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/MenuContext"
+                    android:paddingStart="@dimen/margin_main"
+                    android:paddingEnd="@dimen/margin_main"
+                    style="@style/itemSubText"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_license_title_2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_sub_title"
                 >
@@ -124,7 +128,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="@dimen/margin_main"
                     android:text="@string/license_2"
-                    style="@style/MenuTitle"
+                    style="@style/itemTitle"
                     />
 
                 <androidx.appcompat.widget.AppCompatCheckBox
@@ -150,11 +154,10 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_license_2"
+                android:id="@+id/layout_license_context_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_main"
-                android:layout_marginEnd="@dimen/margin_main"
+                android:background="@color/colorBackground"
                 android:visibility="gone">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -164,8 +167,10 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:paddingStart="@dimen/margin_main"
+                    android:paddingEnd="@dimen/margin_main"
                     android:layout_marginBottom="@dimen/margin_main"
-                    style="@style/MenuContext"
+                    style="@style/itemSubText"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
