--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="cardTextPreview">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">45sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="cardSubText">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">25sp</item>
@@ -85,19 +92,19 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="MenuTitle">
-        <item name="android:textColor">@color/colorBlack</item>
-        <item name="android:textSize">16sp</item>
-    </style>
+<!--    <style name="MenuTitle">-->
+<!--        <item name="android:textColor">@color/colorBlack</item>-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--    </style>-->
 
-    <style name="MenuSubTitle">
-        <item name="android:textColor">@color/colorDarkGray</item>
-        <item name="android:textSize">16sp</item>
-    </style>
+<!--    <style name="MenuSubTitle">-->
+<!--        <item name="android:textColor">@color/colorDarkGray</item>-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--    </style>-->
 
-    <style name="MenuContext">
-        <item name="android:textColor">@color/colorDarkGray</item>
-        <item name="android:textSize">13sp</item>
-    </style>
+<!--    <style name="MenuContext">-->
+<!--        <item name="android:textColor">@color/colorDarkGray</item>-->
+<!--        <item name="android:textSize">13sp</item>-->
+<!--    </style>-->
 
 </resources>
