--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -50,13 +50,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/colorWhite"
+            android:background="@color/colorBackground"
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_license_title_1"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_sub_title"
+                android:background="@color/colorWhite"
                 >
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -80,7 +81,7 @@
                     android:layout_marginEnd="@dimen/margin_main"
                     android:background="@drawable/bg_selector_into"
                     android:button="@android:color/transparent"
-                    android:backgroundTint="@color/colorDarkGray"
+                    android:backgroundTint="@color/colorGray"
                     />
 
                 <View
@@ -118,6 +119,7 @@
                 android:id="@+id/layout_license_title_2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_sub_title"
+                android:background="@color/colorWhite"
                 >
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -141,7 +143,7 @@
                     android:layout_marginEnd="@dimen/margin_main"
                     android:background="@drawable/bg_selector_into"
                     android:button="@android:color/transparent"
-                    android:backgroundTint="@color/colorDarkGray"
+                    android:backgroundTint="@color/colorGray"
                     />
 
                 <View
