--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,9 +54,9 @@
         android:layout_height="@dimen/size_main_button_medium"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/margin_main"
-        android:layout_marginStart="@dimen/margin_main"
-        android:src="@drawable/ic_delete_3"
+        android:layout_marginTop="@dimen/margin_common"
+        android:layout_marginStart="@dimen/margin_common"
+        android:src="@drawable/ic_delete_2"
         android:tint="@color/colorGray"
         android:padding="3dp"
         android:visibility="gone"
@@ -68,8 +68,8 @@
         android:layout_height="@dimen/size_main_button_medium"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/margin_main"
-        android:layout_marginEnd="@dimen/margin_main"
+        android:layout_marginTop="@dimen/margin_common"
+        android:layout_marginEnd="@dimen/margin_common"
         android:src="@drawable/ic_setting"
         android:tint="@color/colorGray"
         />
@@ -84,7 +84,7 @@
         android:background="@drawable/bg_circle"
         android:src="@drawable/ic_close"
         android:tint="@color/colorOrange"
-        android:layout_marginBottom="@dimen/margin_main"
+        android:layout_marginBottom="@dimen/margin_common"
         android:padding="10dp"
         android:backgroundTint="@color/colorWhite"
         android:elevation="@dimen/elevation_main"
@@ -100,8 +100,8 @@
         android:background="@drawable/bg_circle"
         android:src="@drawable/ic_check"
         android:tint="@color/colorGreen"
-        android:layout_marginEnd="@dimen/margin_main"
-        android:layout_marginBottom="@dimen/margin_main"
+        android:layout_marginEnd="@dimen/margin_common"
+        android:layout_marginBottom="@dimen/margin_common"
         android:backgroundTint="@color/colorWhite"
         android:padding="10dp"
         android:elevation="@dimen/elevation_main"
